test/expected/explain_hwt.out
explain short wchar_t x
        ^
9: error: "short wchar_t" is illegal for built-in type
